# trend-lab-wearable-vault-260608

./: LICENSE  README.md  pyproject.toml
src/wearable_vault/: main.py
tests/: test_smoke.py
