[project]
name = "wearable-vault"
version = "0.1.0"
description = "Local-first health data exporter for wearable owners."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Wearable Vault Contributors" }]
license = { text = "MIT" }
dependencies = []

[project.scripts]
wearable-vault = "wearable_vault.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
